--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.2.1",
+    "@reduxjs/toolkit": "^1.9.2",
     "classnames": "^2.3.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
