--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,7 +14,7 @@ on:
 
 env:
   ## Sets environment variable
-  NEXT_PUBLIC_GA_MEASUREMENT_ID: ${{secrets.API_KEY}}
+  NEXT_PUBLIC_GA_MEASUREMENT_ID: ${{secrets.NEXT_PUBLIC_GA_MEASUREMENT_ID}}
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
